// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCheckboxField A with a link 1`] = `
{
  "isRequired": false,
  "isValid": false,
  "label": "label",
  "link": "https://example.com",
  "order": 0,
  "regex": /\\^\\[\\\\w\\\\s\\]\\{3,100\\}\\$/u,
  "type": "checkbox",
  "value": false,
}
`;

exports[`createSelectField A with a link 1`] = `
{
  "isRequired": false,
  "isValid": false,
  "label": "label",
  "link": "https://example.com",
  "options": [],
  "order": 0,
  "regex": /\\^\\[\\\\w\\\\s\\]\\{3,100\\}\\$/u,
  "type": "select",
  "value": "",
}
`;

exports[`validateForm A invalid field value 1`] = `
{
  "errorMessage": "Airtable base is invalid, "azerty" should match /^app\\w{14}$/u",
  "fields": {
    "base": {
      "isRequired": true,
      "isValid": false,
      "label": "Airtable base",
      "link": "https://airtable.com/api",
      "order": 10,
      "regex": /\\^app\\\\w\\{14\\}\\$/u,
      "type": "text",
      "value": "azerty",
    },
    "table": {
      "isRequired": true,
      "isValid": false,
      "label": "Airtable table",
      "order": 30,
      "regex": /\\^\\[\\\\w-\\]\\{3,100\\}\\$/u,
      "type": "text",
      "value": "",
    },
    "token": {
      "isRequired": true,
      "isValid": false,
      "label": "Airtable personal access token",
      "link": "https://airtable.com/create/tokens",
      "order": 20,
      "regex": /\\^pat\\[\\\\w\\.\\]\\{50,100\\}\\$/u,
      "type": "text",
      "value": "",
    },
    "view": {
      "isRequired": true,
      "isValid": false,
      "label": "Airtable view",
      "order": 40,
      "regex": /\\^\\[\\\\w-\\]\\{3,100\\}\\$/u,
      "type": "text",
      "value": "",
    },
    "wrap": {
      "isRequired": false,
      "isValid": true,
      "label": "Wrap api key",
      "link": "https://wrapapi.com/user/api",
      "order": 50,
      "regex": /\\^\\\\w\\{32\\}\\$/u,
      "type": "text",
      "value": "",
    },
  },
  "isTouched": false,
  "isValid": false,
}
`;

exports[`validateForm B valid form 1`] = `
{
  "errorMessage": "",
  "fields": {
    "base": {
      "isRequired": true,
      "isValid": true,
      "label": "Airtable base",
      "link": "https://airtable.com/api",
      "order": 10,
      "regex": /\\^app\\\\w\\{14\\}\\$/u,
      "type": "text",
      "value": "app1238479649646a",
    },
    "table": {
      "isRequired": true,
      "isValid": true,
      "label": "Airtable table",
      "order": 30,
      "regex": /\\^\\[\\\\w-\\]\\{3,100\\}\\$/u,
      "type": "text",
      "value": "my-table",
    },
    "token": {
      "isRequired": true,
      "isValid": true,
      "label": "Airtable personal access token",
      "link": "https://airtable.com/create/tokens",
      "order": 20,
      "regex": /\\^pat\\[\\\\w\\.\\]\\{50,100\\}\\$/u,
      "type": "text",
      "value": "pat12345654987123azdazdzadazdzadaz465465468479649646azd46az465azdazd",
    },
    "view": {
      "isRequired": true,
      "isValid": true,
      "label": "Airtable view",
      "order": 40,
      "regex": /\\^\\[\\\\w-\\]\\{3,100\\}\\$/u,
      "type": "text",
      "value": "my-view",
    },
    "wrap": {
      "isRequired": false,
      "isValid": true,
      "label": "Wrap api key",
      "link": "https://wrapapi.com/user/api",
      "order": 50,
      "regex": /\\^\\\\w\\{32\\}\\$/u,
      "type": "text",
      "value": "13246874kpohj4987_azdzad13546354",
    },
  },
  "isTouched": false,
  "isValid": true,
}
`;
